tests/error/struct_errors/struct_enum_nested_recursive.err
Error: Unsupported (at $FILE:6:28)
  | 
4 | @guppy.enum
5 | class MyEnum:
6 |     Variant1 = {"x": "tuple[MyStruct, int]"}
  |                             ^^^^^^^^ Recursive definitions are not supported

Guppy compilation failed due to 1 previous error
